# arturo

./: Cargo.toml  Justfile  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  lychee.yml
demo/: README.md
demo/src/: config.rs  epoch.rs  main.rs  participant.rs  payload.rs  sidecar.rs  status.rs
demo/src/tui/: app.rs  input.rs  mod.rs  view.rs
examples/: basic.rs  custom_payload.rs  static_sequencer.rs
src/: automaton.rs  conductor.rs  lib.rs  providers.rs  traits.rs  types.rs
