[package]
name = "arturo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Andreas Bigger <andreas@nascent.xyz>"]
license = "MIT"
description = "Minimal op-conductor rewrite using commonware ordered_broadcast"
homepage = "https://github.com/refcell/arturo"
repository = "https://github.com/refcell/arturo"
keywords = ["consensus", "sequencer", "ordered-broadcast"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Commonware crates
commonware-consensus = "0.0.65"
commonware-cryptography = "0.0.65"
commonware-utils = "0.0.65"

# Async runtime
futures = "0.3"
futures-channel = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
rstest = "0.24"
tokio = { version = "1", features = ["full"] }

[lints.rust]
missing-debug-implementations = "warn"
missing_docs = "warn"
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unnameable-types = "warn"
unused-must-use = "deny"

[lints.rustdoc]
all = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
use-self = "warn"

[profile.dev]
debug = "line-tables-only"
incremental = false
split-debuginfo = "packed"

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = 3
panic = "unwind"
strip = "symbols"

[profile.maxperf]
inherits = "release"
codegen-units = 1
lto = "fat"
